Split date and time input + reservation list update

--- a/src/components/reservationsList.module.css
+++ b/src/components/reservationsList.module.css
@@ -12,6 +12,6 @@
 
 .item {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr)) 200px 40px;
+    grid-template-columns: repeat(3, minmax(0, 1fr)) 200px 40px 40px;
     gap: 0.5rem;
 }
