--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,9 @@
 *, *::before, *::after {
   box-sizing: border-box;
 }
+
+body {
+  min-height: 100vh !important;
+  display: flex;
+  flex-direction: column;
+}
