--- a/src/components/adminPanel.module.css
+++ b/src/components/adminPanel.module.css
@@ -21,6 +21,10 @@
     border: 1px solid var(--chakra-colors-gray-200); */
 }
 
+.item.small {
+    grid-template-columns: auto repeat(2, minmax(0, 1fr)) 200px 40px 40px;
+}
+
 .approveButton .short {
     display: none;
 }
@@ -36,6 +40,10 @@
     .item {
         grid-template-columns: minmax(0, 0.75fr) repeat(2, minmax(0, 1fr)) 40px 40px 40px;
     }
+
+    .item.small {
+        grid-template-columns: auto repeat(2, minmax(0, 1fr)) 40px 40px 40px;
+    }
 }
 
 @media (max-width: 650px) {
@@ -43,18 +51,36 @@
         grid-template-columns: repeat(3, 1fr);
     }
 
-    .item > * {
+    .item:not(.small) > * {
         grid-column: span 3;
     }
 
-    .item > *:nth-last-child(3) {
+    .item:not(.small) > *:nth-last-child(3) {
         grid-column: 1;
     }
-    .item > *:nth-last-child(2) {
+    .item:not(.small) > *:nth-last-child(2) {
         grid-column: 2;
     }
-    .item > *:nth-last-child(1) {
+    .item:not(.small) > *:nth-last-child(1) {
         grid-column: 3;
+    }
+
+    .item.small {
+        grid-template-columns: auto repeat(3, 1fr);
+    }
+
+    .item.small > *:nth-child(2) {
+        grid-column: span 2;
+    }
+
+    .item.small > *:nth-last-child(3) {
+        grid-column: 2;
+    }
+    .item.small > *:nth-last-child(2) {
+        grid-column: 3;
+    }
+    .item.small > *:nth-last-child(1) {
+        grid-column: 4;
     }
 }
 
